src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600&display=swap');


.bordercolor {
  border: solid 1px #046CF1;
}

.aboutbutton {
  background: linear-gradient(180deg, #19A1FC 0%, #046CF1 100%);
  overflow: hidden;
  transition: box-shadow 0.3s ease;
  /* Add transition for the box-shadow property */
}

.aboutbutton:hover {
  box-shadow: 0px 4px 23px rgba(59, 158, 255, 0.34);
}

.bordercolor {
  transition: box-shadow 0.3s ease;
  /* Add transition for the box-shadow property */
}

.bordercolor:hover {
  box-shadow: 0px 4px 23px rgba(59, 158, 255, 0.34);
}

.adjustsection {
  margin-top: -25px;
}

.newsInput {
  border-bottom-left-radius: 15px;
  border-top-left-radius: 15px;
}

.newsButton {
  position: relative;
  background-image: linear-gradient(to right,
      #0467F1,
      #05CAFB);
  z-index: 1;
  border-bottom-right-radius: 15px;
  border-top-right-radius: 15px;
}

.newsButton::before {
  position: absolute;
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-image: linear-gradient(to bottom,
      #0467F1,
      #0467F1);
  z-index: -1;
  transition: opacity 0.3s linear;
  opacity: 0;
  border-bottom-right-radius: 15px;
  border-top-right-radius: 15px;
}

.newsButton:hover::before {
  opacity: 1;
}

.phonepad {
  padding-top: 81px;
}

.backimage {
  margin-left: -110px;
}

.backimageRight {
  margin-right: -110px;
}

.appbuttons {
  margin-top: -120px;
}

.wrapperCom {
  max-width: 1408px;
  margin-top: -80px;
}

.test {
  height: 800px;
}

.textFade {
  opacity: 0;
  transform: translateX(-140px);
  /* Adjust the initial position as needed */

}

.textFadeRight {
  opacity: 0;
  transform: translateX(140px);
  /* Initial state with x = 40 */

}

.textFadeRight.active {
  opacity: 1;
  transform: translateX(0);
  /* Target state when in view */
}

.textFade2 {
  animation: fadeInRight 2s both;
}

@keyframes fadeInRight {
  0% {
    opacity: 0;
    transform: translateX(140px);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

.swiper-button-next,
.swiper-button-prev {
  position: absolute;
  top: 50%;
  width: calc(var(--swiper-navigation-size)/ 44 * 27);
  height: var(--swiper-navigation-size);
  margin-top: calc(0px - (var(--swiper-navigation-size)/ 2));
  z-index: 10;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--swiper-navigation-color, var(--swiper-theme-color));
}

:root {
  --swiper-navigation-color: #dfdfdf;
}

.swiper {
  width: 100%;
  padding-top: 50px;
  padding-bottom: 50px;

}

.swiper-wrapper {
  max-width: 100%;
}

.swiper-slide {
  background-position: center;
  background-size: cover;
  width: 300px;
  height: 300px;

}

.swiper-slide img {
  display: block;
  width: 100%;
}

.lottieWrap {
  background: linear-gradient(180deg, #19A1FC 0%, #046CF1 100%);
  border-radius: 50px;
  overflow: hidden;
  max-width: 559px;
}

.HomeTitle {
  background: -webkit-linear-gradient(#1d75f3, #12bcf9);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.NavBarWrapper {
  max-width: 1408px;
  margin: auto;
  border-radius: 40px;
}

.PageWrapper {
  max-width: 1408px;
  margin: auto;
}

.componentWrapper {
  max-width: 1408px;
  margin: auto;
  margin-top: 40px;
}

.container {
  margin-top: 67px;
  margin-left: -40px;
}

.rightPhone {
  padding-left: 400px;
  padding-top: 108px;
  border-radius: 50px;
  top: 40;
  width: 740px;
}

.hero {
  background: linear-gradient(180deg, #19A1FC 0%, #046CF1 100%);
  border-radius: 50px;
  overflow: hidden;
}

.heroServices {

  border-radius: 50px;
  overflow: hidden;
}

.heroText {
  font-family: 'Urbanist';
  font-weight: 600;
  font-size: 48px;
}

.AppContainer {
  background: linear-gradient(180deg, #19A1FC 0%, #046CF1 100%);
  border-radius: 50px;
}

.stickyWrapper {
  position: -webkit-sticky;
  /* Safari */
  position: sticky;
  top: 0;
  z-index: 99;
}

.mobileNav {
  max-width: 1408px;
  margin: auto;
  width: 100%;
  border-radius: 40px;
  z-index: 20;
}

.mobileNavDrawer {
  max-width: 1408px;
  margin: auto;
  width: 100%;
  margin-top: -10px;
  z-index: -2;
  border-bottom-left-radius: 40px;
  border-bottom-right-radius: 40px;
}

.navText {
  color: #077ACE;
}

.demoButton {
  box-sizing: border-box;
  justify-content: center;
  align-items: center;
  padding-left: 18px;
  padding-top: 12px;
  gap: 10px;
  width: 112px;
  height: 46px;
  border: 1px solid #FFFFFF;
  border-radius: 1000px;
  font-weight: 600;
  font-size: 16px;
  line-height: 19px;
  letter-spacing: -0.02em;
  color: #FFFFFF;
}

.demoServicesButton {
  border: 1px solid #046CF1;
  box-sizing: border-box;
  justify-content: center;
  align-items: center;
  padding: 16px 32px;
  gap: 10px;
  width: 112px;
  height: 46px;
  border-radius: 1000px;
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 19px;
  letter-spacing: -0.02em;
  background: linear-gradient(180deg, #14B3FC 0%, #1857F8 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-fill-color: transparent;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.butWrapHome {
  width: 115px;
  height: 45px;
  background: #FFFFFF;
  backdrop-filter: blur(2px);
  /* Note: backdrop-filter has minimal browser support */
  border-radius: 28px;
  /* Inside auto layout */
  flex: none;
  order: 0;
  flex-grow: 0;
}

.homeNavBar {
  background-color: #19A1FC;
}

.buttonBubbleBlue {
  background: linear-gradient(270.1deg, #19A1FC 0.09%, #046CF1 98.4%);
  box-shadow: 0px 4px 23px rgba(59, 158, 255, 0.34);
}


:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {}

